--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^6.1.0",
     "pg-promise": "^5.3.2",
     "rome": "^2.1.22",
+    "sendgrid": "4.1.0",
     "seriate": "^0.8.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
